--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Ex1G8Constrains</string>
+    <string name="app_name">Layout Codelab</string>
 </resources>
