cose che non ricordo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Layout Codelab</string>
+    <string name="singapore_description">Singapore (AFI: /sinɡaˈpore/[5]), ufficialmente Repubblica di Singapore (in malese Republik Singapura; in inglese Republic of Singapore; in cinese 新加坡共和国, Xīnjiāpō Gònghéguó; in tamil சிங்கப்பூர் குடியரசு, Ciŋkappūr Kudiyarasu), è una città-Stato del sud-est asiatico, situata sull\'estrema punta meridionale della penisola malese, 152 km a nord dell\'equatore. Si sviluppa su un arcipelago formato da 58 isole, la più grande e principale delle quali è l\'isola di Singapore che ospita la metropoli.</string>
 </resources>
